Search alignment fix

--- a/_sass/website-left-navigation.scss
+++ b/_sass/website-left-navigation.scss
@@ -133,6 +133,7 @@ section.account, section.docs {
 
             .search-field {
               @extend input, [type="text"];
+              align-items: baseline;
               background: #fff;
               display: flex;
               padding: 7px;
